$Id$

2015-06-04  Christian Franke  <franke@computer.org>

	smartmontools 6.4

2015-06-03  Christian Franke  <franke@computer.org>

	drivedb.h:
	- InnoDisk iCF 9000 CompactFlash Cards
	- SanDisk based SSDs: ReadyCache SSD
	- Seagate Barracuda 7200.14 (AF): Apple OEM
	- USB: Toshiba Canvio Basics (0x0480:0xa200)

	ataprint.cpp: Read General Purpose Log Directory only if GPL
	feature set is supported.  Improve support check of old logs
	for older drives which return empty SMART Log Directory.

2015-06-01  Christian Franke  <franke@computer.org>

	Makefile.am, smartd.8.in: Hide initscript documentation if
	initscriptdir is not configured.
	smartd.conf.5.in: Remove outdated info about default shell.

2015-05-30  Christian Franke  <franke@computer.org>

	Fixes for aacraid patch:
	aacraid.h: Fix _WIN32/_WIN64 checks.
	os_win32.cpp: Clarify copyright info in GPL header.
	Improve source code formatting.
	Fix build on Cygwin.  Fix HKEY leak.
	Fix member initialization order.
	Fix info_name and dev_type parameter order.
	Improve error handling.  Avoid unsafe sprintf().
	Remove unused variables.  Add help text.
	Use 0 as number of first aacraid controller as on Linux.

	smartctl.8.in, smartd.conf.5.in: Update '-d aacraid' documentation.
	AUTHORS: Add Nidhi Malhotra.

2015-05-30  Nidhi Malhotra  <nidhi.malhotra@pmcs.com>

	aacraid.h, os_win32.cpp:
	Add aacraid support for Windows (ticket #496).

2015-05-27  Christian Franke  <franke@computer.org>

	INSTALL: Update ./configure description.
	Remove info about old Linux kernel series.
	Update Windows info.

2015-05-19  Christian Franke  <franke@computer.org>

	ataprint.cpp: Print the Additional Product Identifier (OEM Id)
	regardless of '-q noserial' option.

	smartctl.8.in, smartd.conf.5.in: Clarify '-H' option and directive.

2015-05-17  Christian Franke  <franke@computer.org>

	drivedb.h:
	- USB: ViPowER USB3.0 Storage (0x0350:0x0038)
	- USB: Buffalo DriveStation HD-LBU2 (0x0411:0x01ea)